fixing scrollbars/sizing

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -24,23 +24,9 @@
   top: 0px;
   left: 200px;
   overflow: hidden;
-  /* display: flex;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  -webkit-flex-flow: row wrap;
-  -moz-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  -o-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-justify-content: flex-start;
-  -moz-justify-content: flex-start;
-  -ms-justify-content: flex-start;
-  -o-justify-content: flex-start;
-  justify-content: flex-start; */
   height: 100%;
   min-height: 100%;
-  width: calc(100-200px);
+  width: calc(100%-200px);
   z-index: 1;
 }
 
@@ -86,17 +72,16 @@
   -ms-transition: transform 0.1s linear;
   -o-transition: transform 0.1s linear;
   opacity: 0;
-  width: 80% !important;
+  padding-right: 10%;
 }
 
 .flex-before .flex-item-left,
 .flex-active .flex-item-left {
   opacity: 1;
-  width: 87vw;
 }
 
 .flex-active {
-  width: 87%;
+  width: calc(100vw - 200px);
   overflow-y: auto;
   z-index: 5;
 }
@@ -110,7 +95,6 @@
   -ms-transition: transform 0.2s linear 0.2s, opacity 0.5s linear 0.2s;
   -o-transition: transform 0.2s linear 0.2s, opacity 0.5s linear 0.2s;
   padding: 10%;
-  width: 100%;
 }
 
 /* Animate-START point */
